--- a/김민준/1주차.md
+++ b/김민준/1주차.md
@@ -37,11 +37,23 @@ Swift의 Set은 같은 데이터 타입의 값들을 순서없이 저장하는 C
 - 수학의 집합과 개념이 같다.
 - 교집합 (intersection), A U B - A n B (symmetricDifference), 합집합 (union), 차집합 (subtracting) 연산을 지원한다.
 - var 이름 = ["값1", "값2"] 형태로 사용하면 배열로 인식하기 때문에 축약형이 없다.
+- Set 타입의 값은 `Hashable` 해야 한다.
 
 ### Dictionary
 - Swift의 Dictionary는 순서없이 Key와 Value 데이터를 쌍으로 저장하는 Collection Type이다.
 - Key와 Value는 데이터 타입을 지정하면 동일한 데이터 타입만 사용 가능하다. (Key와 Value의 데이터 타입은 달라도 된다.)
 - 사전과 동일한 개념이다.
+- Dictionary의 Key 값은 `Hashable` 해야 한다.
+
+#### Hash Value
+- 원본 데이터를 특정 규칙에 따라 간단한 숫자로 만든 것을 의미한다.
+- 원본 데이터를 hash function을 이용하여 64bit Int값으로 변환한 값이다.
+- 두 데이터를 비교할 때, 데이터가 동일하면 각 데이터의 해쉬값은 동일하다.
+
+#### Hashable
+- Hashable한 데이터는 Hash value를 구할 수 있다.
+- Set의 데이터, Dictionary의 Key값은 Hashable protocol을 따라야 한다.
+- Protocol에서 더 알아볼 예정.
 
 ## Control Flow
 - For-In Loops
@@ -145,6 +157,27 @@ Reference Counting은 참조 타입인 클래스의 인스턴스에만 적용된
 가비지 컬렉션(GC)와의 차이점 : 참조를 카운팅 하는 시점
 - ARC : 컴파일 시
 - GC : 프로그램 동작 중
+
+### inout Parameter
+- 함수의 매개변수들은 default로 상수(Constant)이다.
+- 함수 body에서 매개변수들의 값을 바꾸려고 시도하면 compile-time error
+- 함수 안에서 매개변수의 값을 바꾸고 싶고, 함수가 끝났을때 그 값을 유지하고 싶다면 in-out parameter 사용.
+- in-out parameter에는 변수(Variable)만 인자로 전달할 수 있다.
+- 인자로 전달할 떄는 & 붙여서 전달
+```Swift
+func swapTwoInts(_ a: inout Int, _ b: inout Int) {
+	let temp = a;
+	a = b;
+	b = temp;
+}
+
+var someInt = 3
+var anotherInt = 107
+swapTwoInts(&someInt, &anotherInt)
+print("someInt is now \(someInt), and anotherInt is now \(anotherInt)")
+// Prints "someInt is now 107, and anotherInt is now 3"
+```
+
 # 어려웠던 부분
 - Optional 개념
 
