feat : 2추차 스터디 (피드백 반영)

--- a/김민준/2주차.md
+++ b/김민준/2주차.md
@@ -99,6 +99,13 @@ hello("Minjun")
 ### Closure
 	Closures are self-contained blocks of functionality that can be passed around and used in your code.
 	Closures in Swift are similar to blocks in C and Objective-C and to lambdas in other programming languages.
+	Closures can capture and store references to any constants and variables from the context in which they’re defined.
+	This is known as closing over those constants and variables.
+	Swift handles all of the memory management of capturing for you.
+
+- Global Functions : 이름이 있고, 어떤 값도 캡쳐하지 않는 클로저
+- Nested Functions : 이름이 있고, 관련된 함수로부터 값을 캡쳐하는 클로저
+- Closure expressions : 이름이 없고, 관련된 문맥으로부터 값을 캡쳐하는 클로저
 - Closure를 사용하면 코드를 더 간결하게 만들 수있다.   
 - Closure는 `{}`로 감싸진 실행가능한 코드 블럭이다.
 ```Swift
@@ -136,6 +143,14 @@ Closure 내부의 코드가 한줄이라면, return도 생략 가능
 let hello: (String, String) -> String = { $1 + $0 + "님 안녕하세요!" }
 hello("Minjun", "Kim")
 ```
+
+#### Capturing Value
+Closure는 특정 문맥의 상수나 변수의 값을 캡쳐할 수 있다.   
+Closure는 상수와 변수를 정의한 원래 범위가 더 이상 존재하지 않더라도 그 상수나 변수의 값을 참조하고 수정할 수 있다.   
+만약 클래스 인스턴스의 프로퍼티로 클로저를 할당하고 해당 인스턴스 또는 해당 인스턴스의 멤버 변수들을 참조하여 해당 인스턴스를 캡처하는 경우, 클로저와 인스턴스 사이에 강한 참조 사이클(Strong Reference Cycle)이 발생한다.   
+- 값을 캡처하는 가장 간단한 형태는 Nested Function이다. 
+- 함수 내부의 값을 캡처하면 함수가 종결되어도 해당 값을 참조할 수 있다.
+- 인스턴스를 캡처하게 되면 강한 참조가 발생되어 메모리 관리 이슈가 발생한다. -> unowned 키워드
 ## 어려웠던 부분
 - Closure 사용법
 
