--- a/김하은/3주차.md
+++ b/김하은/3주차.md
@@ -24,8 +24,7 @@ stringTest = nil              // retain count 가 1 감소되어 0이 되면서 
 자신이 참조는 하지만 weak(약한)메모리를 해제 시킬 수 있는 권한은 다른 클래승 있습니다.
 
 메모리가 해제될 경우 자동으로 레퍼런스가 nil로 초기화를 해주며 weak 속성을 사용하는 객체는 항상 optional타입이어야 됩니다.
-
-( -> 해당 객체가 nil 일 수 있으니 optional 타입이야 되는 건 당연!!)
+-> 해당 객체가 nil 일 수 있으니 optional 타입이야 되는 건 당연!!
 
 """
 weak var weatTest = weakTest()     // 객체가 생성은 되지만 weak참조라 바로 객체가 해제되어 nil이 됩니다.
