Feat : 3주차 - 김민준(피드백)

--- a/김민준/3주차.md
+++ b/김민준/3주차.md
@@ -1,4 +1,4 @@
-# 2주차
+# 3주차
 
 ## 공부한 내용
 
@@ -102,6 +102,37 @@ class SomeClass: SomeProtocol {
 	required init(someParameter: Int) {
 		// 구현부
 	}
+}
+```
+
+#### Delegation
+Delegation은 인스턴스의 책임을 넘기는(Delegation) 디자인 패턴 중 하나로, protocol에 의해 구현된다.
+```Swift
+// View
+class UITableView : UIScrollView {
+    weak var delegate: UITableViewDelegate?
+}
+
+// Controller
+class UIViewController: UITableViewDelegate {
+    let tableView = UITableView()
+    
+    override func viewDidLoad() {
+        tableView.delegate = self
+    }
+    
+    // method implement...
+}
+```
+
+#### Extension
+Extension은 class, struct, enum 또는 protocol에 기능을 추가하는 것   
+`extension`키워드를 사용해 선언한다.
+```Swift
+extension SomeType {
+	// 메소드
+	// 연산 프로퍼티
+	// 이니셜라이저 추가 가능
 }
 ```
 
